/*
 * host_path API result
 */
syntax = "proto3";

/*
 * Host path
 */
message HostPath {
    // IP address of source host
    string src_ip = 1;

    // IP address of destination host
    string dst_ip = 2;

    // Path consists of a list of switches with in and out ports
    repeated PathNode path= 3;

    // link to system overview API
    string system_state_url = 4;

    // Node on the host path
    message PathNode {
        // switch name
        string switch = 1;

        // incoming port
        int32 in = 2;

        // outgoing port
        int32 out = 3;
    }
}